--- a/duuie_byos.ipynb
+++ b/duuie_byos.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -944,12 +944,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pytorch-training-2022-06-09-10-16-24-907\n"
+     ]
+    }
+   ],
    "source": [
     "training_job_name = estimator.latest_training_job.name\n",
-    "# training_job_name = 'pytorch-training-2022-06-07-03-39-32-658'\n",
+    "# training_job_name = 'pytorch-training-2022-06-09-10-16-24-907'\n",
     "print(training_job_name)"
    ]
   },
@@ -963,10 +971,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "!rm -rf model.tar.gz\n",
     "!rm -rf model_*\n",
